change files names

--- a/style-css/about.css
+++ b/style-css/about.css
@@ -11,7 +11,7 @@ div.wrap {
 
 .wrap header {
   margin: 170px auto 0;
-  background-image: url(../grafika/flower.jpg);
+  background-image: url(../graphics/flower.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
