--- a/style-css/prices.css
+++ b/style-css/prices.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(../grafika/yellow-flower.jpg);
+  background-image: url(../graphics/yellow-flower.jpg);
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
