--- a/style-css/promotions-media.css
+++ b/style-css/promotions-media.css
@@ -194,7 +194,7 @@
   div.wrap-prom {
     margin: 0;
     text-align: center;
-    background-image: url(../grafika/promo-img1.png);
+    background-image: url(../graphics/promo-img1.png);
     background-position: right center;
     background-size: 700%;
   }
