--- a/style-css/treatments-description.css
+++ b/style-css/treatments-description.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(../grafika/treat-face.jpg);
+  background-image: url(../graphics/treat-face.jpg);
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
